<resources>
    <string name="app_name">CourseApp</string>

    <string name="action_help">Help</string>

    <!-- Label for overflow menu option that deletes all  data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Records</string>

    <!-- Title for the activity to add new data [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_course">Add a Course</string>

    <!-- Title for the activity to edit a course [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_course">Edit Course</string>

    <!-- Label for editor menu option to save course and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current course [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Course</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_grade">Grade</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Credit</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_course_code">Code</string>

    <!-- Text hint for course title field in the editor [CHAR LIMIT=30] -->
    <string name="hint_course_title">Title</string>

    <!-- Text hint for credit hours in the editor [CHAR LIMIT=30] -->
    <string name="hint_credit_hours">Hours</string>

    <string name="unit_course_credit">hrs</string>


    <!-- Tab titles -->
    <string name="level100">100</string>
    <string name="level200">200</string>
    <string name="level300">300</string>
    <string name="level400">400</string>

    <!-- Labels for dropdown menu options for course grades [CHAR LIMIT=20] -->
    <string name="grade_A">  A  </string>
    <string name="grade_B1">  B+  </string>
    <string name="grade_B2">  B  </string>
    <string name="grade_C1">  C+  </string>
    <string name="grade_C2">  C  </string>
    <string name="grade_D1">  D+  </string>
    <string name="grade_D2">  D  </string>
    <string name="grade_E">  E  </string>
    <string name="Inactive">Pending</string>

    <!-- Toast message in editor when new course has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_course_successful">Course record saved</string>

    <!-- Toast message in editor when new course has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_course_failed">Error with saving course</string>


    <string name="editor_update_course_failed">Error updating course</string>

    <!-- Toast message in editor when current course was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_course_successful">Course deleted</string>

    <!-- Toast message in editor when current course has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_course_failed">Error with deleting course</string>

    <!-- Dialog message to ask the user to confirm deleting the current course [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this course?</string>

    <!-- Dialog message to ask the user to confirm deleting the current semester course records[CHAR LIMIT=NONE] -->
    <string name="deleteAll_dialog_msg">Delete All courses?</string>

    <!-- Dialog button text for the option to confirm deleting the current course [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current course [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current course [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_update_course_successful">Course updated</string>

    <!-- Title text for the empty view image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It seems you\'re yet to add records for this semester...</string>


    <!-- Subtitle text for the empty view that prompts the user to add a course [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a course</string>

    <!-- Strings for help activity-->
    <string name="help1"><b>Selecting a semester</b>\n\nTo select a semester and access its records, simply swipe to the
desired level and select the corresponding semester.</string>

    <string name="help2"><b>Adding a course</b>\n\nTo add a course, tap on the blue floating button with the "+" symbol.</string>
    <string name="help3"><b>Adding a course</b>\n\nAn add course form is displayed from which users can enter course information
and tap the save icon to save.</string>

    <string name="help4"><b>Editing a course</b>\n\nTo edit a course, simply tap on a saved course from the semester records preview
page.</string>

    <string name="help5"><b>Editing a course(Saving an edited course)</b>\n\nA form identical to the add course form is displayed with information from the selected course.
Simply make desired changes and tap the save icon to finish editing.</string>

    <string name="help6"><b>Editing a course(Deleting a selected course)</b>\n\nTo delete a course, simply tap the delete icon on the upper right corner of the
edit course screen.</string>

    <string name="help7"><b>Deleting all courses</b>\n\nTo delete all courses for a given semester, tap the delete icon on the upper right corner of the
semester records preview screen.</string>

    <string name="help8"><b>Note</b>\n\nThe app can be used to make projections for a semester.
Courses for a semester can be added from which its grades can
be altered to check how it affects the final cgpa.
Users can use this to know the grade needed, for each course,
to achieve a target cgpa.</string>

    <string name="About"><b>About the app</b>\n\nCourseApp is a grade point average (gpa) and cumulative grade point average(cgpa)
    monitoring app. It is used to calculate gpa and cgpa as per courses added.</string>

    <string name="help_title">Help</string>

</resources>
