<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- CourseCode field -->
            <EditText
                android:id="@+id/edit_course_code"
                android:hint="@string/hint_course_code"
                android:inputType="textCapCharacters"
                style="@style/EditorFieldStyle"
                android:maxLength="10"/>

            <!-- CourseTitle field -->
            <EditText
                android:id="@+id/edit_course_title"
                android:hint="@string/hint_course_title"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                android:maxLength="30"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Grade category -->
    <LinearLayout
        android:id="@+id/container_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_grade"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_grade"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_measurement"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Credit field -->
            <EditText
                android:id="@+id/edit_course_credit"
                android:hint="@string/hint_credit_hours"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for credit (hrs) -->
            <TextView
                android:id="@+id/label_credit_units"
                android:text="@string/unit_course_credit"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
